feat: create user app

--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -16,5 +16,12 @@
                 <!-- <span class="toggle-icon"></span> -->
             </a>
         </li>
+        <li>
+            <a href="{% url 'profile' %}">
+                <span class="nav-icon uil uil-edit"></span>
+                <span class="menu-text">Configurações</span>
+                <!-- <span class="toggle-icon"></span> -->
+            </a>
+        </li>
     </ul>
 </div>
