--- a/templates/pages/integrations/integration.html
+++ b/templates/pages/integrations/integration.html
@@ -162,6 +162,57 @@
                 </div>
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-12 mt-xl-0 mt-lg-30">
+                <div class="row product-page-list justify-content-center">
+                    <div class="col-12 mb-25 px-10">
+                        <div class="card job job--list">
+                            <div class="h-100">
+                                <div class="job-item px-25 py-30">
+                                    <div class="card-body p-0 d-flex align-items-sm-center align-items-start flex-wrap">
+                                        <form method="post">
+                                            {% csrf_token %}
+                                            <div class="job-item__body d-flex flex-wrap">
+                                                <div class="job-item__image d-flex align-items-center">
+                                                    <a href="#"><img class="job-item__image-img img-fluid" src="{% static 'img/integrations/guru.png' %}" alt="digital-chair"></a>
+                                                    <div class="job-item__title">
+                                                        <a href="">
+                                                            <h6 class="card-title">Digital Manager Guru</h6>
+                                                            <input type="hidden" name="integration" value="guru">
+                                                            <input type="hidden" name="platform" value="guru">
+                                                        </a>
+                                                        <span>webhook</span>
+                                                    </div>
+                                                </div>
+                                                <div class="job-item__content d-flex">
+                                                    <div class="job-deadline">
+                                                        <span>URL</span>
+                                                        <h6>{{ webhook.guru.url }}</h6>
+                                                    </div>
+                                                    <div class="job-type">
+                                                        <span>Status</span>
+                                                        <h6>{{ webhook.guru.status }}</h6>
+                                                    </div>
+                                                    <div class="job-salery">
+                                                        <span>Chamadas Recebidas</span>
+                                                        <h6>{{ webhook.guru.countCalls }}</h6>
+                                                    </div>
+                                                </div>
+                                                <div class="job-item__button d-flex flex-wrap my-sm-0 my-10">
+                                                    <button type="submit" name="btn" value="{% if webhook.guru.status == 'Ativo' %}Desativar{% else %}Ativar{% endif %}" class="btn btn-default btn-squared color-none btn-outline-none px-20" id="{{ user.id }}">
+                                                        {% if webhook.guru.status == "Ativo" %}Desativar{% else %}Ativar{% endif %} webhook
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
