feat: changes logos

--- a/templates/partials/_top_nav.html
+++ b/templates/partials/_top_nav.html
@@ -3,9 +3,9 @@
 <nav class="navbar navbar-light">
   <div class="navbar-left">
     <div class="logo-area">
-      <a class="navbar-brand" href="#">
-        <img class="dark" src="{% static 'img/logo_dark.svg' %}" alt="svg" />
-        <img class="light" src="{% static 'img/logo_white.svg' %}" alt="img" />
+      <a class="navbar-brand" href="{% url 'home' %}">
+          <img class="dark" src="{% static 'img/svg/zapgrana_logo.svg' %}" alt="svg" width="50" height="50"/>
+        <!-- <img class="light" src="{% static 'img/zapgrana_logo.svg' %}" alt="svg" /> -->
       </a>
       <a href="#" class="sidebar-toggle">
         <img
