--- a/templates/layout/app.html
+++ b/templates/layout/app.html
@@ -9,15 +9,10 @@
     <title>ZapGrana - {% block title %} {% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    {% if request.session.dir and request.session.dir == 'rtl' %}
-        <link  rel="stylesheet" href="{% static 'css/plugin.min.rtl.css' %}">
-        <link  rel="stylesheet" href="{% static 'css/style.rtl.css' %}">
-    {% else %}
-        <link  rel="stylesheet" href="{% static 'css/plugin.min.css' %}">
-        <link  rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% endif %}
+    <link  rel="stylesheet" href="{% static 'css/plugin.min.css' %}">
+    <link  rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/svg/favicon.png' %}">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.0/css/line.css">
 </head>
 <body class="layout-light side-menu">
