--- a/templates/layout/app.html
+++ b/templates/layout/app.html
@@ -14,6 +14,9 @@
 
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/svg/favicon.png' %}">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.0/css/line.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
 </head>
 <body class="layout-light side-menu">
     <div class="mobile-search">
