--- a/templates/pages/calendar/calendar.html
+++ b/templates/pages/calendar/calendar.html
@@ -1,6 +1,6 @@
 {% extends 'layout/no-side-bar.html' %}
 
-{% block title %} Calendar {% endblock %}
+{% block title %} Agenda {% endblock %}
 
 {% load i18n %}
 
