--- a/templates/layout/no-side-bar.html
+++ b/templates/layout/no-side-bar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Villa Santorini - {% block title %} {% endblock %}</title>
+    <link rel="shortcut icon" href="//villasantorini.com.br/wp-content/uploads/2019/10/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link  rel="stylesheet" href="{% static 'css/plugin.min.css' %}">
