--- a/templates/layout/no-side-bar.html
+++ b/templates/layout/no-side-bar.html
@@ -25,7 +25,7 @@
             }
         }
         .red {
-            background-color: #FF0F0F;
+            background-color: red !important;
         }
 
         .yellow {
