--- a/templates/layout/no-side-bar.html
+++ b/templates/layout/no-side-bar.html
@@ -23,13 +23,32 @@
               font-size: 12px; /* Tamanho de fonte menor */
               padding: 8px; /* Espaçamento interno menor */
             }
+            .fc-event-title {
+                font-size: 0.75em !important;
+            }
+        }      
+        .fc-event {
+            overflow: hidden;
+        }  
+        .fc-bg-event {
+            opacity: .7 !important;
+        }
+        .fc .fc-daygrid-day-number {
+            padding: 0px !important;
+            margin: 2px 4px 0 0 !important;
+        }
+        .fc-event-title {
+            margin-top: 1.5em  !important;
+            opacity: 1 !important;
+            color: black;
+
         }
         .red {
             background-color: red !important;
         }
 
         .yellow {
-            background-color: #ffee00
+            background-color: yellow !important;
         }
     </style>
 </head>
