--- a/templates/layout/no-side-bar.html
+++ b/templates/layout/no-side-bar.html
@@ -24,7 +24,7 @@
               padding: 8px; /* Espaçamento interno menor */
             }
             .fc-event-title {
-                font-size: 0.75em !important;
+                font-size: 0.65em !important;
             }
         }      
         .fc-event {
@@ -41,6 +41,8 @@
             margin-top: 1.3em !important;
             opacity: 1 !important;
             color: black;
+            font-weight: 600 !important;
+            font-style: normal !important;
         }
         .red {
             background-color: red !important;
