--- a/templates/pages/calendar/calendar.html
+++ b/templates/pages/calendar/calendar.html
@@ -15,7 +15,7 @@
             <div class="col-md-12">
                 <div class="d-flex justify-content-end align-items-center mb-2">
                     <div class="col-md-7 offset-md-2"></div>
-                    <label for="customDateField" class="me-2">Pesquisar:</label>
+                    {% comment %} <label for="customDateField" class="me-2">Pesquisar:</label> {% endcomment %}
                     <input type="text" class="form-control ih-medium ip-gray radius b-light me-2" id="customDateField" placeholder="01/01/2000">
                     <button type="button" class="btn btn-default btn-squared btn-primary">Buscar</button>
                   </div>
@@ -47,19 +47,21 @@
 <script src="{% static 'js/plugins/moment.js' %}"></script>
 
 <script>
-    const dateInput = document.getElementById('customDateField');
+    const dateInput = document.getElementById('customDateField'); // Certifique-se de que o elemento do input possui o ID correto
 
     dateInput.addEventListener('input', function () {
         const value = dateInput.value.replace(/\D/g, '');
         
         if (value.length <= 8) {
-        dateInput.value = value
+
+            dateInput.value = value
             .replace(/(\d{2})(\d)/, '$1/$2')
             .replace(/(\d{2})(\d)/, '$1/$2');
         } else {
-        dateInput.value = value.slice(0, 8);
+            dateInput.value = value.slice(0, 8);
         }
     });
+
     const reservados = document.getElementById("reservados").value
     const ocupados = document.getElementById("ocupados").value
 
@@ -78,28 +80,6 @@
         var today = document.getElementsByClassName('fc-today-button');
         var calendar = new FullCalendar.Calendar(calendarEl, {
             locale: 'pt-br',
-            customButtons: {
-                Search: {
-                  text: 'Buscar',
-                  click: function() {
-                    const dataSelecionada = document.getElementById('customDateField').value;
-                    const parts = dataSelecionada.split('/');
-    
-                    if (parts.length === 3) {
-                        const day = parts[0];
-                        const month = parts[1];
-                        const year = parts[2];
-                        
-                        if (!isNaN(day) && !isNaN(month) && !isNaN(year) && day >= 1 && day <= 31 && month >= 1 && month <= 12) {
-                            const convertedDate = `${year}-${month}-${day}`;
-                            if (convertedDate) {
-                                calendar.gotoDate(convertedDate);
-                            }
-                        }
-                    }
-                  }
-                },
-              },
             headerToolbar: {
                 left: "today,prev",
                 center: "title",
@@ -108,6 +88,14 @@
             buttonText: {
                 today: "Hoje",
             },
+            dayMaxEventRows: true, // Isso permite que o calendário mostre todos os eventos em uma única célula do dia.
+            views: {
+                dayGridMonth: {
+                    dayHeaderFormat: {
+                        weekday: 'long'
+                    }
+                },
+              },
             listDayFormat: true,
             allDaySlot: true,
             editable: true,
@@ -126,14 +114,23 @@
                 const month = parts[1];
                 const year = parts[2];
                 
+
                 if (!isNaN(day) && !isNaN(month) && !isNaN(year) && day >= 1 && day <= 31 && month >= 1 && month <= 12) {
-                    const convertedDate = `${year}-${month}-${day}`;
-                    if (convertedDate) {
+                    const convertedDate = new Date(`${year}-${month}-${day}`);
+                    if (isValidDate(convertedDate)) {
+                        document.getElementById('customDateField').classList.add('is-valid')
                         calendar.gotoDate(convertedDate);
+                    } else {
+                        alert(`Data: ${dataSelecionada} não encontrada.`)
+                        document.getElementById('customDateField').classList.add('is-invalid')
                     }
                 }
             }       
         });
+
+        function isValidDate(d) {
+            return d instanceof Date && !isNaN(d);
+        }
     });
 </script>
 {% endblock %}
